# lab6

./: .travis.yml  CMakeLists.txt  README.md
ArrayList/: CMakeLists.txt  TArrayList.cpp  TArrayList.h
List/: CMakeLists.txt  TList.cpp  TList.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_TArrayList.cpp
